changing in button

--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     </head>
     <body>
         <h1>This is about page.</h1>
-        <a href="add favicon.html">Go back</a>
+        <a href="add favicon.html">
+            <button>Go back</button></a>
     </body>
 </html>
