--- a/add favicon.html
+++ b/add favicon.html
@@ -11,8 +11,9 @@
     <h1>Hello World</h1>
     
     <p><b>This is my first website and i m really excited to code this.</b></p>
-    <a href="about.html">Go to about page</a>
-    <button>Click me</button>
+    <a href="about.html">
+    <button>Go to about page</button>
+</a>
     <br/>
     <img src="images.jpeg" alt="just a logo"width="200px"/>
     <br/>
