--- a/add favicon.html
+++ b/add favicon.html
@@ -15,8 +15,10 @@
     <button>Go to about page</button>
 </a>
     <br/>
+    <a href="about.html">
     <img src="images.jpeg" alt="just a logo"width="200px"/>
     <br/>
+</a>
 
     <video controls muted width="200px">
         <source src="video.mp4"/>
@@ -29,6 +31,24 @@
         <input type="checkbox" />
         <button type="submit">Send</button>
     </form>
-   
+   <section>
+    <div>
+        <h1>This is first section</h1>
+    </div>
+   </section>
+   <header>
+    <nav>
+        <ul>
+            <li>Item 1</li>
+            <li>Item 2</li>
+            <li>Item 3</li>
+        </ul>
+        <ol>
+            <li>Item 1</li>
+            <li>Item 2</li>
+            <li>Item 3</li>
+        </ol>
+    </nav>
+   </header>
 </body>
 </html>
